--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pf-feedback-react",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
+  "proxy": "https://pf-feedback.herokuapp.com",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
