--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pf-feedback-react",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://pf-feedback.herokuapp.com",
+  "proxy": "https://pf-feedback.herokuapp.com:5000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
@@ -19,7 +19,7 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"json-server --watch db.json --port 5000\" \"react-scripts start\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
